--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 		<link rel="stylesheet" href="./css/main.css" />
 	</head>
 	<body>
-		<div class="card">
-			<div class="card__top">
+		<main class="card">
+			<section class="card__top">
 				<img src="./img/illustration-hero.svg" alt="guy listening to music" class="card__top-img" />
-			</div>
-			<div class="card__bottom">
+			</section>
+			<section class="card__bottom">
 				<h1 class="card__bottom-title">Order Summary</h1>
 				<p class="card__bottom-text">
 					You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!
@@ -34,7 +34,7 @@
 				<div class="card__bottom-cancel">
 					<p>Cancel Order</p>
 				</div>
-			</div>
-		</div>
+			</section>
+		</main>
 	</body>
 </html>
